--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "discord-api-types": "^0.38.1",
     "discord.js": "^14.19.2",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0"
   },
   "name": "kothbet",
   "version": "1.0.0",
